fixing alignement issue for header icons

--- a/ui.apps/src/main/content/jcr_root/apps/hclecomm/components/content/container/clientlibs/less/container.less
+++ b/ui.apps/src/main/content/jcr_root/apps/hclecomm/components/content/container/clientlibs/less/container.less
@@ -11,7 +11,11 @@ position: relative;
     }
 }
 header.header{
-	
+	.container{
+        .btn-cmp-signup, .minicart, .btn-cmp-logout, .btn-cmp-signin{
+            float:right !important;
+        }
+    }
     .btn-phone-call{	
 		@media screen and (max-width:768px){	
 			display:none;		
